Fixed comments spacing

--- a/sass/yofisio/components/comments.sass
+++ b/sass/yofisio/components/comments.sass
@@ -15,7 +15,8 @@ ol.comment-list
       height: 64px!important
       width: 64px!important
       padding: 0
-      margin: 1rem
-
+      margin: .75rem
+    .comment-content, .comment-author
+      padding-left: 1rem
 .comments-area
   margin-top: 2rem
